crates/alder-can/src/snapshots/alder_can__module__tests__shadowing_local.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x =\n    let\n        x = 1\n    in\n    x\n"
---
[
    Shadowing {
        name: "x",
        original: Region {
            start: Position {
                line: 3,
                column: 3,
            },
            end: Position {
                line: 3,
                column: 4,
            },
        },
        new: Region {
            start: Position {
                line: 5,
                column: 9,
            },
            end: Position {
                line: 5,
                column: 10,
            },
        },
    },
]
