crates/alder-can/src/snapshots/alder_can__module__tests__to_public_union_closed_strips_ctors.snap
---
source: crates/alder-can/src/module.rs
expression: union.to_public()
---
Some(
    InterfaceUnion {
        name: "Bool",
        parameters: [],
        ctors: [],
        alternatives: 0,
        options: Enum,
        visibility: Closed,
    },
)
