crates/alder-can/src/snapshots/alder_can__module__tests__to_public_union_open_passes_through.snap
---
source: crates/alder-can/src/module.rs
expression: union.to_public()
---
Some(
    InterfaceUnion {
        name: "Bool",
        parameters: [],
        ctors: [],
        alternatives: 2,
        options: Enum,
        visibility: Open,
    },
)
